# crowsite

./: .editorconfig  .gitignore  .htmlhintrc  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .stylelintrc.json  404.html  BROWSER-COMPATIBILITY.md  CNAME  CODE-STYLE-GUIDE.md  DEVELOPMENT.md  LICENSE  Makefile  QUICKSTART.md  README.md  TODO_FUTURE.md  eslint.config.js  index.html  jest.config.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
.husky/: pre-commit
assets/poe/: README.md
config/: images.json
docs/: POE-THEME.md
scripts/: check-setup.sh  https_server.py  quick-start.sh  serve.ps1  serve.sh
src/js/: main.js
src/js/core/: asyncWrapper.js  compatibility.js  config.js  constants.js  debugger.js  errorHandler.js  eventBus.js  logger.js  observability.js  performance.js
src/js/modules/: adaptive-images.js  animations.js  audio.js  imageLoader.js  images.js  mobile-debug.js  poe-decor.js  poe-parallax.js  scene-animations.js  terminal.js  theme-poe.js  theme.js
src/js/utils/: dom.js  helpers.js  validators.js
src/styles/: main.css
src/styles/base/: base.css  compatibility.css  reset.css  typography.css  variables.css
src/styles/components/: buttons.css  cards.css  effects.css  forms.css  hero.css  images.css  nav.css  terminal.css
src/styles/layouts/: grid.css  sections.css
src/styles/themes/: cyberpunk.css  poe-animations.css  poe-responsive.css  poe-theme-system.css  poe.css  synthwave.css
tests/: logger.test.js  setup.js
